@@ -54,7 +54,7 @@ class MainUI
 		{
 			$current_user = User :: getCurrentUser();
 			$html = '';
-			$html .= "<ul>\n";
+			$html .= "<ul class='admin_menu_list'>\n";
             
             if($current_user->isSuperAdmin())
             {
@@ -149,12 +149,12 @@ class MainUI
 			if ($user != null)
 			{
 				$html .= '<p>'._("Logged in as:").' '.$user->getUsername().'</p>'."\n";
-				$html .= '<a class="administration" HREF="'.BASE_SSL_PATH.'?content=myprofile"><img class="administration" src="/images/profile.gif" border="0"> '._("My profile").'</a>'."\n";
+				$html .= '<a class="administration" HREF="'.BASE_SSL_PATH.'?content=myprofile"><img class="administration" src="/images/profile.gif" border="0"> '._("My Profile").'</a>'."\n";
                 
                 $gw_id = $session->get(SESS_GW_ID_VAR);
                 $gw_address = $session->get(SESS_GW_ADDRESS_VAR);
                 $gw_port = $session->get(SESS_GW_PORT_VAR);
-                
+
                 if($gw_id && $gw_address && $gw_port)
                     $html .= '<a class="administration" HREF="'.BASE_SSL_PATH.'login/?logout=true&gw_id='.$gw_id.'&gw_address='.$gw_address.'&gw_port='.$gw_port.'"><img class="administration" src="/images/logout.gif" border="0"> '._("Logout").'</a>'."\n";
                 else
